# sqlorm

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  examples.just  justfile  publish.just  test.just  todo.md
benches/: relationships.rs  test.rs
examples/: Cargo.toml
examples/basic/: main.rs
examples/common/entities/: Cargo.toml
examples/common/entities/src/: lib.rs
examples/common/migrations/: 001_create_users.sql  002_create_jars.sql  003_create_donations.sql
examples/common/migrations-helper/: Cargo.toml
examples/common/migrations-helper/src/: lib.rs
examples/common/migrations/postgres/: 001_create_users.sql  002_create_jars.sql  003_create_donations.sql
examples/common/migrations/sqlite/: 001_create_users.sql  002_create_jars.sql
examples/crud/: main.rs
examples/postgres/: Cargo.toml
examples/postgres/src/: lib.rs
examples/postgres/tests/: crud.rs  filters.rs  relations.rs  select.rs
examples/relations/: main.rs
examples/sqlite/: Cargo.toml
examples/sqlite/src/: lib.rs
examples/sqlite/tests/: crud.rs  filters.rs  relations.rs  select.rs
examples/src/: lib.rs  test_db.rs
examples/tests/: crud.rs  filters.rs  relations.rs  select.rs
sqlorm-core/: Cargo.toml
sqlorm-core/src/: consts.rs  generic_row.rs  lib.rs  selectable.rs  traits.rs
sqlorm-core/src/qb/: bind.rs  column.rs  condition.rs  limit_offset.rs  mod.rs
sqlorm-core/src/qb/additions/: joins.rs  mod.rs  order_by.rs  select.rs
sqlorm-core/src/sb/: mod.rs
sqlorm-core/tests/: qb_sql.rs
sqlorm-macros/: Cargo.toml  README.md
sqlorm-macros/src/: attrs.rs  entity.rs  gen_columns.rs  lib.rs  naming.rs
sqlorm-macros/src/qb/: mod.rs
sqlorm-macros/src/qb/executor_trait/: mod.rs
sqlorm-macros/src/qb/relations_trait/: mod.rs
sqlorm-macros/src/relations/: mod.rs  validation.rs
sqlorm-macros/src/relations/lazy/: belongs_to.rs  has_many.rs  mod.rs
sqlorm-macros/src/sb/: executor.rs  mod.rs
sqlorm-macros/src/sb/executor/: delete_executor.rs  mod.rs  update_executor.rs
sqlorm-macros/src/sql/: delete.rs  find.rs  find_all.rs  mod.rs  save.rs  update.rs
sqlorm-macros/src/traits/: from_aliased_row.rs  mod.rs  table.rs
sqlorm-macros/tests/: all.rs  filter.rs  has_many.rs  relations.rs  select.rs
src/: lib.rs
src/sqlorm-core/: Cargo.toml
src/sqlorm-core/src/: column.rs  lib.rs
src/sqlorm-macros/: Cargo.toml
src/sqlorm-macros/src/: lib.rs  schema.rs  table.rs
src/sqlorm-macros/src/codegen/: mod.rs  queries.rs  table.rs
tests/: crud.rs  filters.rs  limit_offset.rs  order_by.rs  relations.rs  select.rs  soft_hard_delete.rs  timestamps.rs
tests/common/: entities.rs  mod.rs
tests/common/migrations/postgres/: 001_create_users.sql  002_create_jars.sql  004_create_timestamp_entities.sql
tests/common/migrations/sqlite/: 001_create_users.sql  002_create_jars.sql  003_create_donations.sql  004_create_timestamp_entities.sql
