[package]
name = "sqlorm"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "sqlorm-core",
  "sqlorm-macros",
  "examples/common/entities",
  "examples/common/migrations-helper",
  "examples",
]

[workspace.dependencies]
sqlorm-core = { path = "sqlorm-core" }
sqlorm-macros = { path = "sqlorm-macros" }
async-trait = "0.1.8"
lazy_static = "1.5"
sqlx = { version = "0.8" }
thiserror = "2"


[dependencies]
sqlorm-core.workspace = true
sqlorm-macros.workspace = true
async-trait.workspace = true
sqlx.workspace = true

[features]
default = []
postgres = ["sqlorm-core/postgres", "sqlorm-macros/postgres"]
sqlite = ["sqlorm-core/sqlite", "sqlorm-macros/sqlite"]
chrono = ["sqlx/chrono"]
uuid = ["sqlorm-core/uuid", "sqlorm-macros/uuid"]
migrate = ["sqlx/migrate"]


[package.metadata.docs.rs]
features = ["postgres"]

[workspace.lints.clippy]
expect_used = "warn"
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
unwrap_used = "warn"
wildcard_imports = "warn"
