
[workspace.package]
version = "0.3.1"
license = "Apache-2.0"
edition = "2024"
exclude = ["/.github", "/examples", "/tests"]
authors = ["Lev Lavryniuk <levlavryniuk@gmail.com>"]
keywords = ["sqlx", "postgres", "orm", "sqlite", "database", "backend"]
repository = "https://github.com/levlavryniuk/sqlorm"

[package]
name = "sqlorm"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "An ergonomic and type-safe ORM for database interactions"
readme = "README.md"
documentation = "https://docs.rs/sqlorm"

[workspace]
members = ["sqlorm-core", ".", "sqlorm-macros"]

[workspace.dependencies]
sqlorm-core = { path = "sqlorm-core", version = "0.3.*" }
sqlorm-macros = { path = "sqlorm-macros", version = "0.3.*" }
async-trait = "0.1.8"
lazy_static = "1.5"
sqlx = { version = "0.8.6" }
thiserror = "2"
hashbrown = "0.16"


[dependencies]
sqlorm-core.workspace = true
sqlorm-macros.workspace = true
async-trait.workspace = true
sqlx.workspace = true
hashbrown.workspace = true

[features]
default = []
postgres = ["sqlorm-core/postgres", "sqlorm-macros/postgres"]
sqlite = ["sqlorm-core/sqlite", "sqlorm-macros/sqlite"]
chrono = ["sqlx/chrono"]
extra-traits = ["sqlorm-macros/extra-traits"]
uuid = ["sqlorm-core/uuid", "sqlorm-macros/uuid"]
migrate = ["sqlx/migrate"]
raw-sqlx = []


[package.metadata.docs.rs]
features = ["postgres"]

[workspace.lints.clippy]
expect_used = "warn"
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
unwrap_used = "warn"
wildcard_imports = "warn"

[dev-dependencies]
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "uuid",
  "any",
  "sqlite",
  "mysql",
  "postgres",
  "chrono",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-test = "0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.8"
criterion = { version = "0.7", features = ["async_tokio"] }
rand = "0.9"
