[package]
name = "sqlorm-examples"
version = "0.2.1"
edition = "2024"

[dependencies]
sqlorm = { path = "../", default-features = false }
entities = { path = "common/entities", default-features = false }
sqlx = { version = "0.8.6", features = ["chrono"] }
migrations-helper = { path = "common/migrations-helper", default-features = false }

tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

tempfile = { version = "3.8", optional = true }

[features]
default = []
postgres = [
  "sqlorm/postgres",
  "entities/postgres",
  "migrations-helper/postgres",
]
sqlite = [
  "sqlorm/sqlite",
  "entities/sqlite",
  "migrations-helper/sqlite",
  "dep:tempfile",
]
uuid = ["entities/uuid"]

[[test]]
name = "crud"
path = "tests/crud.rs"

[[test]]
name = "filters"
path = "tests/filters.rs"

[[test]]
name = "relations"
path = "tests/relations.rs"

[[test]]
name = "select"
path = "tests/select.rs"
