[package]
name = "sqlorm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
async-trait.workspace = true

[features]
default = ["runtime-tokio-rustls"]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
uuid = ["sqlx/uuid"]

[package.metadata.docs.rs]
features = ["postgres"]
