[package]
name = "sqlorm-core"
description = "Core library for sqlorm"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sqlx.workspace = true
async-trait.workspace = true

[features]
default = ["runtime-tokio-rustls"]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
uuid = ["sqlx/uuid"]

[package.metadata.docs.rs]
features = ["postgres"]
