[package]
name = "sqlorm-core"
description = "Core library for sqlorm"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sqlx.workspace = true
async-trait.workspace = true
uuid = { version = "1.18.1", optional = true, features = ["v4"] }

[features]
default = ["runtime-tokio-rustls"]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
uuid = ["sqlx/uuid", "dep:uuid"]

[package.metadata.docs.rs]
features = ["postgres"]
