[package]
name = "sqlorm-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true


[features]
default = []
uuid = ["sqlorm-core/uuid"]
postgres = ["sqlorm-core/postgres"]
sqlite = ["sqlorm-core/sqlite"]


[dependencies]
sqlorm-core.workspace = true
proc-macro2 = { version = "1.0.36", default-features = false }
syn = { version = "2.0.39", default-features = false, features = [
  "parsing",
  "proc-macro",
  "extra-traits",
] }
quote = { version = "1.0.14", default-features = false }
