[package]
name = "sqlorm-macros"
description = "Macros codegen for sqlorm"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true


[features]
default = []
sqlite = ["sqlorm-core/sqlite"]
extra-traits = []
uuid = ["sqlorm-core/uuid"]
postgres = ["sqlorm-core/postgres"]


[dependencies]
sqlorm-core.workspace = true
proc-macro2 = { version = "1.0.36", default-features = false }
syn = { version = "2.0.39", default-features = false, features = [
  "parsing",
  "proc-macro",
  "extra-traits",
] }
quote = { version = "1.0.14", default-features = false }
