[package]
name = "sqlorm-sqlite-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
sqlorm = { path = "../../", features = ["sqlite"] }
entities = { path = "../common/entities", features = ["sqlite"] }
migrations-helper = { path = "../common/migrations-helper", features = ["sqlite"] }

# SQL dependencies
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"

[features]
default = ["sqlite"]
sqlite = []

[[test]]
name = "crud"
path = "tests/crud.rs"

[[test]]
name = "filters"
path = "tests/filters.rs"

[[test]]
name = "relations"
path = "tests/relations.rs"

[[test]]
name = "select"
path = "tests/select.rs"
