[package]
name = "entities"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlorm = { path = "../../../", features = ["uuid"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["chrono"] }

[features]
default = []
postgres = ["sqlorm/postgres"]
sqlite = ["sqlorm/sqlite"]
uuid = ["sqlorm/uuid"]
